--- a/app/src/main/res/layout/second_page.xml
+++ b/app/src/main/res/layout/second_page.xml
@@ -101,12 +101,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/placeAddress"
             tools:ignore="UseSwitchCompatOrMaterialXml"
             tools:targetApi="m" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/placeAddress"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
