--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -57,13 +57,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/placeName"
-                    android:layout_marginStart="62dp"
+                    android:layout_marginStart="58dp"
                     android:layout_marginTop="-6dp"
                     android:backgroundTint="#8C2020"
                     android:clickable="false"
                     android:contentDescription="@string/please_select_a_rating_for_the_attraction"
                     android:foregroundTint="#A14B4B"
                     android:indeterminateTint="#B6B6B6"
+                    android:isIndicator="true"
                     android:numStars="5"
                     android:progressBackgroundTint="#5961A7B3"
                     android:progressTint="#f853ca"
