--- a/app/src/main/res/layout/second_page.xml
+++ b/app/src/main/res/layout/second_page.xml
@@ -117,7 +117,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/city_state" />
+            app:layout_constraintTop_toBottomOf="@+id/location" />
 
         <TextView
             android:id="@+id/textView3"
@@ -148,7 +148,7 @@
             app:layout_constraintTop_toBottomOf="@+id/attractions" />
 
         <AutoCompleteTextView
-            android:id="@+id/city_state"
+            android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -170,35 +170,37 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <SeekBar
-            android:id="@+id/costScale"
+            android:id="@+id/distanceScale"
             android:layout_width="300dp"
             android:layout_height="64dp"
             android:layout_marginTop="24dp"
+            android:padding="10dp"
             android:background="#00FFFFFF"
-            android:max="3"
-            android:progress="1"
+            android:max="60"
+            android:min="-10"
+            android:progress="10"
             android:progressDrawable="@drawable/progress_drawn"
             android:scrollbarSize="64sp"
             android:splitTrack="false"
-            android:thumb="@drawable/dollar_sign_blue"
+            android:thumb="@drawable/ic_baseline_navigation_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <TextView
-            android:id="@+id/cost"
+            android:id="@+id/miles"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:fontFamily="@font/orbitron"
-            android:text="@string/affordable"
+            android:text="@string/ten"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/costScale" />
+            app:layout_constraintTop_toBottomOf="@+id/distanceScale" />
 
         <Button
             android:id="@+id/search"
@@ -214,7 +216,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cost" />
+            app:layout_constraintTop_toBottomOf="@+id/miles" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
