--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#000000">
 
 
@@ -33,23 +33,23 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:adjustViewBounds="true"
-                    android:scaleX="1.1"
-                    android:scaleType="fitXY"
-                    android:contentDescription="Show the image of the place"
-                    loadimage='@{"https://content.fortune.com/wp-content/uploads/2017/04/restuarant-exterior-red-robin-4749x2633.jpg?resize=750,500"}'/>
+                    android:scaleX="1.5"
+                    android:scaleType="centerCrop"
+                    android:contentDescription="Show the image of the place" />
 
                 <TextView
                     android:id="@+id/placeName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="210dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/placePhoto"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginStart="2dp"
                     android:fontFamily="@font/orbitron"
                     android:padding="10dp"
                     android:text="Red Robin"
                     android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textSize="10pt"
+                    android:textSize="8pt"
                     android:textStyle="bold" />
 
                 <TextView
@@ -68,7 +68,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/placeName"
-                    android:layout_marginStart="58dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="-6dp"
                     android:backgroundTint="#8C2020"
                     android:clickable="false"
@@ -91,7 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/placeRating"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginBottom="15dp"
                     android:backgroundTint="#2cb3fb"
                     android:scaleX="1"
@@ -100,36 +100,18 @@
                     app:icon="@android:drawable/ic_dialog_map"
                     tools:ignore="TextContrastCheck" />
 
-                <ImageView
-                    android:id="@+id/locationIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/placePhoto"
-                    android:layout_marginStart="215dp"
-                    android:layout_marginTop="12dp"
-                    android:contentDescription="Show the icon of locations"
-                    app:srcCompat="@drawable/ic_location"
-                    tools:ignore="ImageContrastCheck" />
-
-                <TextView
-                    android:id="@+id/placeDistance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/placePhoto"
-                    android:layout_marginStart="242dp"
-                    android:layout_marginTop="13dp"
-                    android:text="10.5 mi."
-                    android:textColor="#5C5C5C"
-                    android:textSize="16sp" />
-
                 <TextView
                     android:id="@+id/placeAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/placeReviews"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="12dp"
+                    android:paddingHorizontal="12dp"
+                    android:paddingBottom="10dp"
                     android:text="2200 NW Stewart Pkwy, Roseburg"
+                    android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
